Fixed modal window styles on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -354,4 +354,14 @@ Main Styles
   .detailes_img {
     width: 100%;
   }
+
+  .modal-inner {
+    max-width: 450px;
+    min-width: 200px;
+  }
+
+  .btn-close {
+    top: -49rem;
+    right: -1rem;
+  }
 }
